add favicon + replace app-icon usage

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
             <div class="md:col-span-2">
                 <div class="flex items-center space-x-3 mb-4">
                     <div class="w-8 h-8 bg-white rounded-lg flex items-center justify-center p-1">
-                        <img src="{{ '/assets/images/app-icon.png' | relative_url }}" 
+                        <img src="{{ '/assets/images/favicon.svg' | relative_url }}" 
                              alt="Tailored Pics App Icon" 
                              class="w-full h-full object-contain rounded-md">
                     </div>
