--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <!-- Logo -->
             <div class="flex items-center space-x-3">
                 <div class="w-10 h-10 bg-white rounded-xl flex items-center justify-center p-1">
-                    <img src="{{ '/assets/images/app-icon.png' | relative_url }}" 
+                    <img src="{{ '/assets/images/favicon.svg' | relative_url }}" 
                          alt="Tailored Pics App Icon" 
                          class="w-full h-full object-contain rounded-lg">
                 </div>
